# michelangelo-examples

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  cliff.toml  pyproject.toml
.claude/skills/pr-template/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: build-image.yaml  bump-michelangelo-pin.yml  changelog.yml  release.yml  test.yaml
examples/: README.md
examples/config/: project.yaml
scripts/: version-bump.sh
src/michelangelo_examples/: __init__.py
src/michelangelo_examples/california_housing/: README.md
src/michelangelo_examples/california_housing/config/: project.yaml
src/michelangelo_examples/california_housing/pipelines/libs/tasks/: feature_prep.py  preprocess.py
src/michelangelo_examples/california_housing/pipelines/pytorch_lightning_train/: README.md  __main__.py  _backend.py  pipeline.py  pipeline.yaml  push.py  train.py
src/michelangelo_examples/california_housing/pipelines/pytorch_train/: README.md  __init__.py  __main__.py  _backend.py  assemble.py  model.py  pipeline.py  pipeline.yaml  push.py  train.py
src/michelangelo_examples/california_housing/pipelines/xgb_train/: README.md  __init__.py  pipeline.py  pipeline.yaml  push.py  train.py
