[project]
name = "michelangelo-examples"
version = "0.0.1"
description = "Pip-installable, ready-to-run example models and pipelines for Michelangelo"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Michelangelo maintainers" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/michelangelo_examples"]
