[project]
name = "michelangelo-examples"
version = "0.1.0"
description = "Pip-installable, ready-to-run example models and pipelines for Michelangelo"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Michelangelo maintainers" },
]

[project.optional-dependencies]
# One extras group per project (use case), not per pipeline: all pipelines
# under california_housing (today: pytorch_train; future:
# xgboost_train, etc.) share this dependency set and the same built image,
# so pinning per-pipeline would just duplicate near-identical extras.
# michelangelo's published wheel gates pyspark/pytorch_lightning/ray/torch
# behind its own "example" extra, which also drags in a pile of unrelated
# deps (xgboost, transformers, mlflow, kaggle, chronon-ai, ...). There is no
# standalone "ray" extra. Rather than pull in "example", this project
# declares pyspark/pytorch_lightning/ray/torch directly, matching the
# version constraints from michelangelo's own pyproject.toml.
california-housing = [
    # >=0.5.0: floor kept current with michelangelo's latest release via the
    # scheduled bump-michelangelo-pin.yml drift check (see spec 055 in the
    # ma-oss-release harness repo). Previously pinned to 0.4.0rc2 (rc2, not
    # rc1: fixed RayTrainReportCallback.local_rank being referenced but never
    # assigned, github.com/michelangelo-ai/michelangelo issue #1518).
    "michelangelo>=0.5.0",
    "pyspark==3.5.5",
    "pytorch_lightning>=2.2.0,<3.0.0",
    "ray[default,data]>=2.55.1,<3.0.0",
    "pyarrow>=19.0.0,<20.0.0",
    "torch>=2.0",
    "scikit-learn>=1.3",
    "pandas>=2.1",
    # push.py's fsspec.core.url_to_fs() needs an S3 implementation for
    # s3:// paths; neither michelangelo nor the above deps pull one in.
    "s3fs>=2023.1.0",
    # _backend.py's resolve_storage_backend() uses michelangelo's
    # MinioStorageBackend whenever AWS_ENDPOINT_URL is set (i.e. any
    # sandbox/prod run against MinIO or S3-compatible storage). michelangelo
    # gates the 'minio' package behind its own "minio"/"example" extras
    # rather than declaring it as a core dependency.
    # TODO(upstream, https://github.com/michelangelo-ai/michelangelo/issues/672):
    # MinIO community edition is unmaintained/archived (AGPL, no more security
    # patches). Drop this once michelangelo's MinioStorageBackend is replaced
    # or made pluggable for an actively-maintained S3-compatible backend
    # (e.g. SeaweedFS/RustFS).
    "minio>=7.2,<8",
    "xgboost>=2.0,<4",
    "xgboost_ray>=0.1.19,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/michelangelo_examples"]
